# Raging

./: .gitignore  GRAPH.md  HOWTOSEEITWORKING.md  README.md  pyproject.toml
raging/: __init__.py  config.py
raging/cli/: __init__.py  main.py
raging/embeddings/: __init__.py  base.py  proxy.py
raging/generation/: __init__.py  generator.py
raging/ingest/: __init__.py  base.py  handlers.py  pipeline.py  registry.py
raging/retrieval/: __init__.py  base.py  rerankers.py
raging/storage/: __init__.py  base.py  pgvector.py
tests/: test_cli_overrides.py  test_config.py  test_embeddings.py  test_generation.py  test_handlers.py  test_pipeline.py  test_registry.py  test_rerankers.py
